# cdep-android-studio-freetype-sample

./: .appveyor.yml  .travis.yml  README.md  build.gradle  cdep  cdep.bat  cdep.sha256  cdep.yml
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: SDL_android_main.c  main.cpp
app/src/main/java/org/libsdl/app/: SDLActivity.java
gradle/wrapper/: gradle-wrapper.properties
